plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
}

group = project.maven_group
version = project.mod_version

base {
    archivesName = project.mod_id
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_version
        minecraftVersion = project.minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    maven {
        // JEI
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }

    maven {
        // JEI Mirror
        name = "ModMaven"
        url = "https://modmaven.dev"
    }

    maven {
        // EMI
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }
    maven {
        // Curse Maven
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }
}

dependencies {
    // JEI
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    // runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    // EMI
    compileOnly "dev.emi:emi-neoforge:${emi_version}:api"
    runtimeOnly "dev.emi:emi-neoforge:${emi_version}"

    // PolyMorph
    implementation "maven.modrinth:polymorph:${polymorph_version}"

    /*modImplementation "curse.maven:selene-499980:7708176"
    runtimeOnly "curse.maven:mmmmmmmmmmmm-225738:7206981"
    modImplementation "curse.maven:biolith-852512:7074761"
    modImplementation "curse.maven:zeta-968868:7640154"
    modImplementation "curse.maven:quark-243121:7777937"
    modImplementation "curse.maven:puzzles-lib-495476:7140307"
    runtimeOnly "curse.maven:easy-anvils-682567:5733955"*/
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
             minecraft_version_range: minecraft_version_range,
             neo_version            : neo_version,
             mod_id                 : mod_id,
             mod_name               : mod_name,
             mod_license            : mod_license,
             mod_version            : mod_version,
             mod_authors            : mod_authors,
             mod_description        : mod_description
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}


tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('jar', Jar) {
    exclude '.cache'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
